<resources>
    <string name="app_name">Stop Times</string>
    <string name="action_settings">Settings</string>
    <string name="nca_title">No Internet Connection</string>
    <string name="nca_details">You need a network connection to load stop times. Please turn on network connection
        in the device settings.
    </string>

    <string name="loading_default">Loading…</string>
    <string name="loading_departures">Loading Departures…</string>
    <string name="loading_citybike_status">Loading Information…</string>

    <string name="unexpected_error_title">Oops, Something Went Wrong</string>
    <string name="unexpected_error_message">Something unexpected happened and the latest operation failed. If you see
        this error multiple times, something is definitely broken.
    </string>

    <string name="stoplist_search_hint">Search Stops…</string>
    <string name="stoplist_empty_favorites_title">Favorite Stops</string>
    <string name="stoplist_empty_favorites_description">To get started, use the search to find the stops you care
        about and add them to your favorites.
    </string>
    <string name="stoplist_search_empty_title">No Stops Found</string>
    <string name="stoplist_search_empty_description">The current query did not match any stops.</string>

    <string name="stoplist_search_title">Search Stops</string>
    <string name="stoplist_search_description">Use the stop name to filter down the list of stops.</string>

    <string name="stop_name_with_platform">%1$s, Platform %2$s</string>
    <string name="stop_name_with_track">%1$s, Track %2$s</string>

    <string name="stop_location_helsinki">Helsinki</string>
    <string name="stop_location_espoo">Espoo</string>
    <string name="stop_location_vantaa">Vantaa</string>
    <string name="stop_location_kerava">Kerava</string>
    <string name="stop_location_sipoo">Sipoo</string>
    <string name="stop_location_knummi">Kirkkonummi</string>
    <string name="stop_list_item_icon_desc">Stop Type</string>
    <string name="stop_location_mantsala">Mäntsälä</string>
    <string name="stop_location_jarvenpaa">Järvenpää</string>
    <string name="stop_location_lahti">Lahti</string>
    <string name="stop_location_hyvinkaa">Hyvinkää</string>
    <string name="stop_location_nurmijarvi">Nurmijärvi</string>
    <string name="stop_location_pornainen">Pornainen</string>
    <string name="stop_location_porvoo">Porvoo</string>
    <string name="stop_location_riihimaki">Riihimäki</string>
    <string name="stop_location_tuusula">Tuusula</string>
    <string name="stop_location_unknown">Unknown</string>
    <string name="departure_now">Now</string>
    <string name="departure_list_update_no_connection_failure">Update failed: No connection</string>
    <string name="departure_list_update_unexpected_failure">Update failed: Unexpected error</string>
    <string name="departure_list_update_timeout">Update failed: Timeout</string>
    <string name="departure_list_update_server_error">Update failed: Server error</string>
    <string name="retry">Retry</string>
    <string name="pref_use_location_title">Use Location</string>
    <string name="pref_use_location_summary">Your location will be used to enhance the application functionality.
    </string>
    <string name="pref_cat_general">General</string>
    <string name="pref_cat_stoplist">Stop Listing</string>
    <string name="pref_stoplist_num_results_title">Number of Results</string>
    <string name="pref_stoplist_num_results_summary">The number of stops the stop search returns.</string>
    <string name="pref_cat_departures">Departure Listing</string>
    <string name="pref_num_departures_title">Number of Departures</string>
    <string name="pref_num_departures_summary">The number of departures to shown in the departure listing.</string>
    <string name="pref_key_use_location">use_location</string>

    <string name="pref_key_stoplist_num_results">stoplist_num_results</string>
    <string name="pref_key_departures_num_results">num_departures</string>
    <string name="stop_location_kauniainen">Kauniainen</string>
    <string name="db_update_loading_message">Updating Stop Database…</string>
    <string name="action_update">Update Stop Database</string>
    <string name="stopdb_last_update">stopdb_last_update_timestamp</string>
    <string name="settings">Settings</string>
    <string name="departures_empty_title">No Departures</string>
    <string name="departures_empty_desc">The stop doesn\'t see any traffic in the near future.</string>

    <string name="bottom_favorites">Favorites</string>
    <string name="bottom_nearby">Nearby</string>
    <string name="acquiring_location">Acquiring Location…</string>
    <string name="location_disabled">Location disabled</string>
    <string name="location_disabled_dialog_title">Location Disabled</string>
    <string name="location_disabled_dialog_message">To view stops near your current location, you need to enable the
        location services from the device settings.
    </string>
    <string name="location_disabled_dialog_stop_using_it">Stop Using Location</string>
    <string name="station_train">Train Station</string>
    <string name="station_subway">Subway Station</string>
    <string name="station_generic">Terminal</string>
    <string name="platform_code_train">Track %s</string>
    <string name="platform_code_default">Platform %s</string>
    <string name="pref_key_show_arrivals_to_terminus">show_arrivals_to_terminus</string>
    <string name="pref_show_arrivals_to_terminus_title">Show Arrivals to Terminus</string>
    <string name="pref_show_arrivals_to_terminus_summary">Include arrivals of vehicles in the departure list that only
        drop passengers off at their terminus.
    </string>
    <string name="citybike_station">Citybike Station</string>
    <string name="citybike_station_availability">%1$d/%2$d</string>
    <string name="citybike_status_active">Active</string>
    <string name="citybike_status_inactive">Inactive</string>
    <string name="pref_key_show_citybikes">show_citybikes</string>
    <string name="pref_show_citybikes_title">Show Citybike Stations</string>
    <string name="pref_show_citybikes_summary">Show citybike stations in the application.</string>
    <string name="action_edit_filters">Edit Departure Filters</string>
    <string name="action_save">Save</string>
    <string name="departure_route_description">Route</string>
    <string name="action_toggle_filters">Enable / Disable Filters</string>
</resources>
