<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/stop_list_recycler"
    android:scrollbars="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="io.github.sjakthol.stoptimes.activity.stoplist.StopListFragment" />
